loop removed from video

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,7 +55,7 @@
       </nav>
       
       <div id="video">
-        <video autoplay loop muted>
+        <video autoplay muted>
           <source src="/images/WhatsApp Video 2024-02-18 at 16.41.01_8d5f93f7.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
