--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,13 +14,16 @@ html,body{
 #main{
   height: 100%;
   width: 100%;
-  background-color: black;
+  /* background-color: black; */
   position: relative;
+  /* display: none; */
 }
 
 #nav{
   display: none;
 }
+
+
 
 #video{
   height: 100%;
@@ -28,6 +31,7 @@ html,body{
   position: relative;
   overflow: hidden;
   position: absolute;
+  z-index: 999999999;
 }
 
 #video>video{
@@ -37,7 +41,7 @@ html,body{
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: 9999999;
+  z-index: 9999999999;
   position: absolute;
 }
 
@@ -56,7 +60,7 @@ html,body{
   #nav{
       display: none;
   }
-
+  
   #video>video{
       width: fit-content;
       height: fit-content;
