--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,63 +4,91 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/stylesheets/style.css"/>
+    <link rel="stylesheet" href="/stylesheets/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    
-    
   </head>
+
+  <style>
+    .bookimg{
+      height: 580px;
+      width: 100%;
+      /* filter: blur(1px) */
+    }
+
+    @media (max-width: 768px) {
+      #main{
+        height: 100%;
+  width: 100%;
+      }
+    /* Adjust height for smaller screens */
+    .bookimg{
+      height: 300px;
+      /* filter: blur(1px) */
+    }
+  }
+  </style>
+
   <body>
     <div id="main">
-      <nav class="navbar navbar-expand-lg bg-body-tertiary" id="nav">
+      <nav class="navbar navbar-expand-lg bg-body-tertiary py-2 px-3" id="nav">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <a class="navbar-brand" href="#">Realise Dreams in <br> 3 Days Onwards</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        
+          <div class=" collapse navbar-collapse nav  navnew" id="navbarNavDropdown">
+            <ul class="navbar-nav ms-auto ">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
+                <a class="nav-link mx-2 " aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                <a class="nav-link mx-2 " aria-current="page" href="#">BOOKS BY <br> DINESH SAHAY </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link mx-2" href="#">ARTICLES BY <br> Dinesh Sahay</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link mx-2" href="#">REVIEWS </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link mx-2" href="#">VIDEOS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link mx-2" href="#">FIND US</a>
+              </li>  
+              
             </ul>
-            <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            <ul class="navbar-nav ms-auto ">
+              <li class="nav-item">
+                <a class="nav-link mx-2" href="#">WRITE YOUR <br> WISH-DREAM-PROBLEM</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link mx-2" href="#">REGISTER TO <br>  BECOME A MEMBER</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link mx-2" href="#">JOIN WISH <br>  FULFILMENT PROGRAM</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link mx-2" href="#">TERMS & CONDITIONS, <br>FULFILMENT PROGRAM</a>
+              </li>
+              
+            </ul>
           </div>
         </div>
-      </nav>
-      
+        </nav>
       <div id="video">
         <video autoplay muted>
           <source src="/images/WhatsApp Video 2024-02-18 at 16.41.01_8d5f93f7.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
-      <div class="container">
+      <div class="container disnone" id="nav">
         <!-- First Modal -->
         <div
           class="modal fade"
@@ -209,7 +237,76 @@
           </div>
         </div>
       </div>
+
+      <img src="/images/1.png" class="img-fluid bookimg disnone" alt="..." id="nav">
+
+      <!-- About 1 - Bootstrap Brain Component -->
+<section class="py-3 py-md-5 mt-5 disnone" id="nav">
+  <div class="container">
+    <div class="row gy-3 gy-md-4 gy-lg-0 align-items-lg-center">
+      <div class="col-12 col-lg-6 col-xl-5">
+        <img class="img-fluid rounded" loading="lazy" src="/images/Picture1.jpg" alt="About 1">
+        <h5 class="mt-4 fw-bold">A Practical Program, "ENLIGHTEN THE LAMP OF YOUR FORTUNE"</h5>
+        <h5 class="mt-2 fw-bold">by Mentor & Award-Winning Author, DINESH SAHAY, Program evolved by his research & experience of 25 years</h5>
+      </div>
+      <div class="col-12 col-lg-6 col-xl-7">
+        <div class="row justify-content-xl-center">
+          <div class="col-12 col-xl-11">
+            <h2 class="mb-3">MANIFEST DREAMS/WISHES & SOLVE PROBLEMS Starting from 3rd DAY ONWARDS with a Pre-Set Date.</h2>
+            <p class="mb-2">Anything visible in this Universe or World except 'Self' is Matter, and all actions and reflections are Material in Nature, but when one is connected within, the world comes to your knees automatically and brings prosperity. The Inaction and silence within us bring an action in life which is simple and... that’s it.</p>
+            <p class="mb-2">Ancient Sage, Yogi Vashishtha said in our Hindu ancient scripture; "Fate or Destiny (Bhagya) is the invention of fools and does not exist. Whoever believes in it and is obsessed with divine fate, is the enemy of his soul. He perishes, destroying his good worth and prosperity".</p>
+            <p class="mb-2"> You are the creator of your destiny which is stored for you by God. He releases all manifestation in your life on demand by your thoughts and actions..................... It’s as simple as... That's it.</p>
+            <p class="mb-2"> Your destiny is locked between your past and present thoughts. It’s a fight between past thoughts and present ones. The thoughts that strive hard, win. Thoughts are manifested in one’s life accordingly, successfully or unsuccessfully.</p>
+            <p class="mb-2">Search for Peace, Health, Happiness and Prosperity
+              Anything is possible at any point in time by the Power of God within the self through thoughts, the five senses, spoken words, feelings and Karmas (actions). You can manifest whatever you wish in life; you are the creator through God within and by His grace. 
+              </p>
+              <h4 class="mb-3">You can....</h4>
+            <div class="row gy-4 gy-md-0 gx-xxl-5X mt-1">
+              <div class="col-12 col-md-6">
+                  <div>
+                    <p class="text-secondary mb-0">• Improve the quality of your life,</p>
+                    <p class="text-secondary mb-0">• Change your behaviour,,</p>
+                    <p class="text-secondary mb-0">• Change your personality</p>
+                    <p class="text-secondary mb-0">•	Reduce your weight</p>
+                    <p class="text-secondary mb-0">•	Become rich and abundant,</p>
+                    <p class="text-secondary mb-0">•	Find a divine life partner,</p>
+
+                  </div>
+              </div>
+              <div class="col-12 col-md-6">
+                  <div>
+                    <p class="text-secondary mb-0">•	Make solutions to problems,</p>
+                    <p class="text-secondary mb-0">•	Improve health,</p>
+                    <p class="text-secondary mb-0">•	Overcome diseases,</p>
+                    <p class="text-secondary mb-0">•	Search for peace and enlightenment,</p>
+                    <p class="text-secondary mb-0">•	Worldly pleasures,</p>
+                    <p class="text-secondary mb-0">•	Improve your professional life.</p>
+                  </div>
+              </div>
+            </div>
+            <h4 class="mt-3">Any wish can be fulfilled as per your wish/dream subject to mindset, riders, terms & conditions and conditions.</h4>
+
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+</section>
+        
+      </div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"
+      integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
 
     <script>
       document.addEventListener("DOMContentLoaded", function () {
@@ -225,18 +322,6 @@
       });
     </script>
 
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"
-      integrity="sha512-VEBjfxWUOyzl0bAwh4gdLEaQyDYPvLrZql3pw1ifgb6fhEvZl9iDDehwHZ+dsMzA0Jfww8Xt7COSZuJ/slxc4Q=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-   
     <script src="/javascripts/script.js"></script>
   </body>
 </html>
