--- a/views/index.ejs
+++ b/views/index.ejs
@@ -240,7 +240,7 @@
 
       <img src="/images/1.png" class="img-fluid bookimg disnone" alt="..." id="nav">
 
-      <!-- About 1 - Bootstrap Brain Component -->
+<!-- About 1 - Bootstrap Brain Component -->
 <section class="py-3 py-md-5 mt-5 disnone" id="nav">
   <div class="container">
     <div class="row gy-3 gy-md-4 gy-lg-0 align-items-lg-center">
@@ -292,6 +292,124 @@
     </div>
   </div>
 </section>
+
+<!-- About 2 - Bootstrap Brain Component -->
+<section class="py-3 py-md-5 py-xl-8" id="nav">
+  <div class="container">
+    <div class="row gy-3 gy-md-4 gy-lg-0 align-items-lg-center">
+      <div class="col-12 col-lg-6 col-xl-7">
+        <div class="row justify-content-xl-center">
+          <div class="col-12 col-xl-11">
+            <h2 class="h1 mb-3">Manifest Dreams/Wishes & Solve Problems with Pre-Set date & starting from 3rd Day Onwards</h2>
+            <div class="row gy-4 gy-md-0 gx-xxl-5X">
+              <div class="col-12 col-md-6 mt-3`">
+                <div class="d-flex">
+                  <div>
+                    <p class="text-dark mb-3">1. Do you have any Wish or a Dream or want to solve any problem in your life?</p>
+                    <p class="text-dark mb-3">2. Do you find difficulties in choosing a suitable life partner?</p>
+                    <p class="text-dark mb-3">3. Do you have problems in your marital life?</p>
+                    <p class="text-dark mb-3">4. Are you facing a problem in getting a suitable job?</p>
+                    <p class="text-dark mb-3">5. Do you want to change to a better job profile with a handsome package?</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-md-6 mt-3">
+                <div class="d-flex">
+                  <div>
+                    <p class="text-dark mb-3">6. Do you want to find a better future and life?</p>
+                    <p class="text-dark mb-3">7. Do you have problems related to a job or business?</p>
+                    <p class="text-dark mb-3">8. Do you wish to enhance or expand your business?</p>
+                    <p class="text-dark mb-3">9. Are you getting losses in your organisation?</p>
+                    <p class="text-dark mb-3">10. Do you have any wishes or dreams in your life?</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-lg-6 col-xl-5">
+        <img class="img-fluid rounded" loading="lazy" src="/images/photo-1543002588-bfa74002ed7e.avif" alt="">
+      </div>
+      
+    </div>
+  </div>
+</section>
+
+<!-- FAQ 1 - Bootstrap Brain Component -->
+<section class="bg-light py-3 py-md-5" id="nav">
+  <div class="container">
+    <div class="row gy-5 gy-lg-0 align-items-lg-center">
+      <div class="col-12 col-lg-6">
+        <img class="img-fluid rounded" loading="lazy" src="/images/dreams.avif" alt="How can we help you?">
+      </div>
+      <div class="col-12 col-lg-6">
+        <div class="row justify-content-xl-end">
+          <div class="col-12 col-xl-11">
+            <p class="lead fs-6 text-dark mb-5">The program of Wish Fulfilment, <span class="fw-bold">“Enlighten the Lamp of your Fortune”</span> and <span class="fw-bold">"Make Your Dreams Come True"</span> had been evolved by <span class="fw-bold">Dinesh Sahay</span>, an award-winning, author & mentor 25 years back with a lot of research, experiments in his life, and in the lives of many people which produced astonishing results. He guided a great number of people, members and followers who had realised their dreams. He began guiding people through a website in the past, and he is continuing it. He has written 17 books to date and three audiobooks, some books are about his program, others on experiences of members who have done this program previously and for self-help.</p>
+            <div class="accordion accordion-flush" id="accordionExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                  <button class="accordion-button fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    Who can join & perform this Program?
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <p>Anyone can join this program under the guidance of Mentor & Author, Dinesh Sahay subject to riders, terms & conditions set to get the best results. </p>
+                    <ul>
+                      <li class="fw-bold">This program can only be performed by people of age 18 and above. He has to be an adult, a non-violent person. .</li>
+                      <li class="fw-bold">He/she has to follow the program's pre-set rules and guided steps, and terms & conditions before proceeding with this program to get the best results. They are mentioned in the terms and conditions. </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                  <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    How does the program,"Enlighten the Lamp of your Fortune"undertaken by a member?
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <p>It is a practical program which is so simple that you have to spare just a few minutes of your time from your busy schedule in the day in the four Time Zones and begin this program, "Enlighten the lamp of your Fortune"* while you are travelling in a car, train or a plane or during the office or at your home.</p>
+                    <p>You can observe the results rapidly on pre-set date from the 3rd day onwards towards your Wish/Dream/Goal/ or Solutions to your problems. You may get astonishing results even before a chosen date that you pre-set in your mind before the beginning of this program. </p>
+                    <p>This exercise is done in several steps before the actual program begins which you can understand while you register for membership and the program, "Enlighten the lamp of your Fortune"</p>
+                    <!-- <ul>
+                      <li class="fw-bold">This program can only be performed by people of age 18 and above. He has to be an adult, a non-violent person. .</li>
+                      <li class="fw-bold">He/she has to follow the program's pre-set rules and guided steps, and terms & conditions before proceeding with this program to get the best results. They are mentioned in the terms and conditions. </li>
+                    </ul> -->
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                  <button class="accordion-button collapsed fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Know more about the Program?
+                  </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <p>The program is simple to get what you wish in life, as God is forever ready to fulfil all your demands if you act as per His (God) commands. God wants you to follow the set rules as per the Universal laws of Nature that include so many wise qualities & actions during this program.</p>
+                    <p>Once you start this program of wish fulfilment, you will observe a change in your life starting from the 3rd day onward. Almost all my previous and current members have also felt such experiences that I have written about in my books, Miracles Through My Eyes, and The Story of Unbelievable Miracles of Life and Jeevan ke Kuch Adbhut Pal.</p>
+                    <!-- <ul>
+                      <li>Go to our website and sign in to your account.</li>
+                      <li>Click on your profile picture in the top right corner of the page and select "Account Settings."</li>
+                      <li>Scroll to the bottom of the page and click on "Cancel Account."</li>
+                      <li>Enter your password and click on "Cancel Account."</li>
+                    </ul> -->
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
         
       </div>
     </div>
